fix: minor fix
Refs: XRDDEV-2764